kubernetes/01namespace.yml
kind: Namespace
apiVersion: v1
metadata:
    name: food-delivery
    labels:
      name: food
      environment: prod
