kubernetes/mongodb.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mongodb-statfulset
  namespace: food-delivery
  labels:
    apps: food-mongo
spec:
  serviceName: "mongodb-service"
  replicas: 1
  selector:
    matchLabels:
      apps: food-mongo
  template:
    metadata:
      labels:
        apps: food-mongo
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
  volumeClaimTemplates:
  - metadata:
      name: mongodb-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "gp3"
      resources:
        requests:
          storage: 1Gi
