kubernetes/09backendservice.yml
kind: Service 
apiVersion: v1
metadata:
  name: backend-service 
  namespace: food-delivery 
spec:
  selector:
    app: food-backend 
  ports:
  - targetPort: 4000
    port: 4000
    protocol: TCP
